✨ Implementação de média prioridade: Cookie Consent LGPD, Animações Acessíveis e Responsividade Aprimorada
- 🍪 Cookie consent banner simples (LGPD compliant)
- ✨ Sistema de animações com Intersection Observer
- 📱 CSS responsivo com breakpoints intermediários
- ⏳ Loading states e spinners visuais
- ♿ Suporte a prefers-reduced-motion
- 📊 Tipografia fluida com clamp()
- 🎯 Touch-friendly inputs (44px mínimo)
- 🖨️ Print styles

Arquivos modificados: 8 HTMLs
Arquivos criados: cookie-consent.js, animations.js, enhancements.css, README.md

--- a/agendar.html
+++ b/agendar.html
@@ -35,6 +35,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/variables.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/enhancements.css">
     <style>
         /* Specific styles for scheduling flow */
         .step-container {
@@ -471,6 +472,8 @@
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/schedule.js"></script>
+    <script src="assets/js/cookie-consent.js"></script>
+    <script src="assets/js/animations.js"></script>
 </body>
 
 </html>
