--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/variables.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/enhancements.css">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -300,6 +301,8 @@
     </footer>
 
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/cookie-consent.js"></script>
+    <script src="assets/js/animations.js"></script>
 </body>
 
 </html>
