--- a/sobre.html
+++ b/sobre.html
@@ -36,6 +36,7 @@
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/variables.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/enhancements.css">
 </head>
 
 <body>
@@ -175,6 +176,8 @@
     </footer>
 
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/cookie-consent.js"></script>
+    <script src="assets/js/animations.js"></script>
 </body>
 
 </html>
