--- a/agendar.html
+++ b/agendar.html
@@ -36,6 +36,8 @@
     <link rel="stylesheet" href="assets/css/variables.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/enhancements.css">
+    <link rel="stylesheet" href="assets/css/ux-phase1.css">
+    <link rel="stylesheet" href="assets/css/ux-phase2.css">
     <style>
         /* Specific styles for scheduling flow */
         .step-container {
@@ -474,6 +476,8 @@
     <script src="assets/js/schedule.js"></script>
     <script src="assets/js/cookie-consent.js"></script>
     <script src="assets/js/animations.js"></script>
+    <script src="assets/js/ux-phase1.js"></script>
+    <script src="assets/js/ux-phase2.js"></script>
 </body>
 
 </html>
