✨ UX Fase 3 (Final): Confetti, Scroll Top, 404 e Polimentos
- 🎉 Animação de Confetti na confirmação (com delay de 3.5s no WhatsApp)
- ⬆️ Botão 'Voltar ao Topo' com scroll suave
- 💬 Depoimentos com badge de 'Verificado' e estilo editorial
- 🚫 Página 404 personalizada e amigável
- 🔧 Ajuste no schedule.js para garantir visualização da animação

Arquivos:
- assets/css/ux-phase3.css
- assets/js/ux-phase3.js
- 404.html
- schedule.js (ajuste de delay)

--- a/index.html
+++ b/index.html
@@ -43,17 +43,63 @@
 
     <!-- Icons -->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!DOCTYPE html>
+    <html lang="pt-BR">
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="assets/css/variables.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/enhancements.css">
-    <link rel="stylesheet" href="assets/css/ux-phase1.css">
-    <link rel="stylesheet" href="assets/css/ux-phase2.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Carol Cima | Terapia Corporal - Massoterapia e Bem-Estar em SP</title>
+        <meta name="description"
+            content="Harmonia para o corpo, serenidade para a mente. Terapias manuais personalizadas para alívio da dor e bem-estar.">
+        <meta name="keywords"
+            content="massoterapia sp, reflexologia podal, drenagem linfática, terapia corporal, bambuterapia, auriculoterapia, alinhamento chakras, jardim primavera">
 
-    <!-- Structured Data -->
-    <script type="application/ld+json">
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://carolcima.com.br">
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon.png">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://carolcima.com.br">
+        <meta property="og:title" content="Carol Cima - Terapia Corporal | Harmonia e Bem-Estar">
+        <meta property="og:description"
+            content="Terapias manuais personalizadas para alívio da dor e bem-estar profundo. Massoterapia, Reflexologia, Drenagem Linfática e mais.">
+        <meta property="og:image" content="https://carolcima.com.br/assets/img/og-image.png">
+        <meta property="og:locale" content="pt_BR">
+
+        <!-- Twitter -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:url" content="https://carolcima.com.br">
+        <meta name="twitter:title" content="Carol Cima - Terapia Corporal">
+        <meta name="twitter:description"
+            content="Harmonia para o corpo, serenidade para a mente. Terapias manuais especializadas.">
+        <meta name="twitter:image" content="https://carolcima.com.br/assets/img/og-image.png">
+
+        <!-- Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap"
+            rel="stylesheet">
+
+        <!-- Icons -->
+        <script src="https://unpkg.com/@phosphor-icons/web"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+        <!-- Styles -->
+        <link rel="stylesheet" href="assets/css/variables.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/enhancements.css">
+        <link rel="stylesheet" href="assets/css/ux-phase1.css">
+        <link rel="stylesheet" href="assets/css/ux-phase2.css">
+        <link rel="stylesheet" href="assets/css/ux-phase3.css">
+
+        <!-- Structured Data -->
+        <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
@@ -94,7 +140,7 @@
       ]
     }
     </script>
-</head>
+    </head>
 
 <body>
 
@@ -307,6 +353,7 @@
     <script src="assets/js/animations.js"></script>
     <script src="assets/js/ux-phase1.js"></script>
     <script src="assets/js/ux-phase2.js"></script>
+    <script src="assets/js/ux-phase3.js"></script>
 </body>
 
 </html>
