--- a/agendar.html
+++ b/agendar.html
@@ -30,260 +30,293 @@
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap"
         rel="stylesheet">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!DOCTYPE html>
+    <html lang="pt-BR">
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="assets/css/variables.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/enhancements.css">
-    <link rel="stylesheet" href="assets/css/ux-phase1.css">
-    <link rel="stylesheet" href="assets/css/ux-phase2.css">
-    <style>
-        /* Specific styles for scheduling flow */
-        .step-container {
-            display: none;
-            animation: fadeIn 0.5s ease;
-        }
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Agendar Sessão | Carol Cima Terapia Corporal</title>
+        <meta name="description"
+            content="Agende sua sessão de terapia corporal. Escolha o serviço, data e horário que melhor se adequam à sua necessidade.">
+        <meta name="keywords" content="agendar massoterapia, agendar reflexologia, agendamento online terapia">
 
-        .step-container.active {
-            display: block;
-        }
+        <!-- Canonical URL -->
+        <link rel="canonical" href="https://carolcima.com.br/agendar.html">
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon.png">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://carolcima.com.br/agendar.html">
+        <meta property="og:title" content="Agende sua Sessão - Carol Cima Terapia Corporal">
+        <meta property="og:description" content="Escolha seu serviço, data e horário. Agendamento fácil e rápido.">
+        <meta property="og:image" content="https://carolcima.com.br/assets/img/og-image.png">
+
+        <!-- Fonts & Icons -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap"
+            rel="stylesheet">
+        <script src="https://unpkg.com/@phosphor-icons/web"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+        <!-- Styles -->
+        <link rel="stylesheet" href="assets/css/variables.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/enhancements.css">
+        <link rel="stylesheet" href="assets/css/ux-phase1.css">
+        <link rel="stylesheet" href="assets/css/ux-phase2.css">
+        <link rel="stylesheet" href="assets/css/ux-phase3.css">
+        <style>
+            /* Specific styles for scheduling flow */
+            .step-container {
+                display: none;
+                animation: fadeIn 0.5s ease;
             }
 
-            to {
-                opacity: 1;
-                transform: translateY(0);
+            .step-container.active {
+                display: block;
             }
-        }
 
-        .progress-bar {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 3rem;
-            position: relative;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-        }
+            @keyframes fadeIn {
+                from {
+                    opacity: 0;
+                    transform: translateY(10px);
+                }
 
-        .progress-bar::before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 0;
-            width: 100%;
-            height: 2px;
-            background: #e0e0e0;
-            z-index: 0;
-            transform: translateY(-50%);
-        }
+                to {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
+            }
 
-        .step-indicator {
-            width: 40px;
-            height: 40px;
-            background: #fff;
-            border: 2px solid #e0e0e0;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 600;
-            color: #999;
-            position: relative;
-            z-index: 1;
-            transition: all 0.3s;
-        }
+            .progress-bar {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 3rem;
+                position: relative;
+                max-width: 600px;
+                margin-left: auto;
+                margin-right: auto;
+            }
 
-        .step-indicator.active {
-            border-color: var(--color-violeta);
-            background: var(--color-violeta);
-            color: #fff;
-        }
+            .progress-bar::before {
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 0;
+                width: 100%;
+                height: 2px;
+                background: #e0e0e0;
+                z-index: 0;
+                transform: translateY(-50%);
+            }
 
-        .step-indicator.completed {
-            border-color: var(--color-violeta);
-            background: #fff;
-            color: var(--color-violeta);
-        }
+            .step-indicator {
+                width: 40px;
+                height: 40px;
+                background: #fff;
+                border: 2px solid #e0e0e0;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-weight: 600;
+                color: #999;
+                position: relative;
+                z-index: 1;
+                transition: all 0.3s;
+            }
 
-        /* Service Selection */
-        .service-select-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 1.5rem;
-        }
+            .step-indicator.active {
+                border-color: var(--color-violeta);
+                background: var(--color-violeta);
+                color: #fff;
+            }
 
-        .service-option {
-            border: 2px solid #eee;
-            padding: 1.5rem;
-            border-radius: var(--radius-md);
-            cursor: pointer;
-            transition: all 0.3s;
-            text-align: center;
-        }
+            .step-indicator.completed {
+                border-color: var(--color-violeta);
+                background: #fff;
+                color: var(--color-violeta);
+            }
 
-        .service-option:hover {
-            border-color: var(--color-violeta);
-            background: #fcfcfc;
-        }
-
-        .service-option.selected {
-            border-color: var(--color-violeta);
-            background: rgba(164, 138, 184, 0.1);
-        }
-
-        /* Calendar */
-        .calendar-wrapper {
-            max-width: 400px;
-            margin: 0 auto;
-            background: #fff;
-            padding: 1rem;
-            border-radius: var(--radius-md);
-            box-shadow: var(--shadow-sm);
-        }
-
-        .calendar-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 1rem;
-        }
-
-        .calendar-grid {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            gap: 5px;
-            text-align: center;
-        }
-
-        .calendar-day-header {
-            font-weight: 600;
-            font-size: 0.9rem;
-            color: #999;
-            padding-bottom: 0.5rem;
-        }
-
-        .calendar-day {
-            padding: 10px;
-            border-radius: 50%;
-            cursor: pointer;
-            transition: all 0.2s;
-        }
-
-        .calendar-day:hover:not(.disabled) {
-            background: #eee;
-        }
-
-        .calendar-day.selected {
-            background: var(--color-violeta);
-            color: #fff;
-        }
-
-        .calendar-day.disabled {
-            color: #ccc;
-            cursor: not-allowed;
-        }
-
-        /* Time Slots */
-        .time-slots {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-            gap: 1rem;
-            margin-top: 2rem;
-        }
-
-        .time-slot {
-            padding: 0.5rem;
-            border: 1px solid #ddd;
-            border-radius: var(--radius-sm);
-            text-align: center;
-            cursor: pointer;
-            transition: all 0.2s;
-        }
-
-        .time-slot:hover:not([style*="not-allowed"]) {
-            border-color: var(--color-violeta);
-        }
-
-        .time-slot.selected {
-            background: var(--color-violeta);
-            color: #fff;
-            border-color: var(--color-violeta);
-        }
-
-        /* Form */
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: 500;
-        }
-
-        .form-group input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: var(--radius-sm);
-            font-family: var(--font-body);
-            transition: border-color 0.3s;
-        }
-
-        .form-group input:focus {
-            outline: none;
-            border-color: var(--color-violeta);
-            box-shadow: 0 0 0 3px rgba(164, 138, 184, 0.1);
-        }
-
-        /* Error Messages */
-        .error-messages {
-            background: #fee;
-            border: 1px solid #c33;
-            border-radius: var(--radius-sm);
-            padding: 1rem;
-            margin-bottom: 1.5rem;
-            color: #c33;
-        }
-
-        .error-messages strong {
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-
-        .error-messages ul {
-            list-style: disc;
-            margin-left: 1.5rem;
-            margin-top: 0.5rem;
-        }
-
-        .error-messages i {
-            margin-right: 0.5rem;
-        }
-
-        input.error {
-            border-color: #c33 !important;
-            background-color: #fff5f5;
-        }
-
-        input.error:focus {
-            box-shadow: 0 0 0 3px rgba(204, 51, 51, 0.1);
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
+            /* Service Selection */
             .service-select-grid {
-                grid-template-columns: 1fr;
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+                gap: 1.5rem;
             }
-        }
-    </style>
-</head>
+
+            .service-option {
+                border: 2px solid #eee;
+                padding: 1.5rem;
+                border-radius: var(--radius-md);
+                cursor: pointer;
+                transition: all 0.3s;
+                text-align: center;
+            }
+
+            .service-option:hover {
+                border-color: var(--color-violeta);
+                background: #fcfcfc;
+            }
+
+            .service-option.selected {
+                border-color: var(--color-violeta);
+                background: rgba(164, 138, 184, 0.1);
+            }
+
+            /* Calendar */
+            .calendar-wrapper {
+                max-width: 400px;
+                margin: 0 auto;
+                background: #fff;
+                padding: 1rem;
+                border-radius: var(--radius-md);
+                box-shadow: var(--shadow-sm);
+            }
+
+            .calendar-header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 1rem;
+            }
+
+            .calendar-grid {
+                display: grid;
+                grid-template-columns: repeat(7, 1fr);
+                gap: 5px;
+                text-align: center;
+            }
+
+            .calendar-day-header {
+                font-weight: 600;
+                font-size: 0.9rem;
+                color: #999;
+                padding-bottom: 0.5rem;
+            }
+
+            .calendar-day {
+                padding: 10px;
+                border-radius: 50%;
+                cursor: pointer;
+                transition: all 0.2s;
+            }
+
+            .calendar-day:hover:not(.disabled) {
+                background: #eee;
+            }
+
+            .calendar-day.selected {
+                background: var(--color-violeta);
+                color: #fff;
+            }
+
+            .calendar-day.disabled {
+                color: #ccc;
+                cursor: not-allowed;
+            }
+
+            /* Time Slots */
+            .time-slots {
+                display: grid;
+                grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+                gap: 1rem;
+                margin-top: 2rem;
+            }
+
+            .time-slot {
+                padding: 0.5rem;
+                border: 1px solid #ddd;
+                border-radius: var(--radius-sm);
+                text-align: center;
+                cursor: pointer;
+                transition: all 0.2s;
+            }
+
+            .time-slot:hover:not([style*="not-allowed"]) {
+                border-color: var(--color-violeta);
+            }
+
+            .time-slot.selected {
+                background: var(--color-violeta);
+                color: #fff;
+                border-color: var(--color-violeta);
+            }
+
+            /* Form */
+            .form-group {
+                margin-bottom: 1.5rem;
+            }
+
+            .form-group label {
+                display: block;
+                margin-bottom: 0.5rem;
+                font-weight: 500;
+            }
+
+            .form-group input {
+                width: 100%;
+                padding: 12px;
+                border: 1px solid #ddd;
+                border-radius: var(--radius-sm);
+                font-family: var(--font-body);
+                transition: border-color 0.3s;
+            }
+
+            .form-group input:focus {
+                outline: none;
+                border-color: var(--color-violeta);
+                box-shadow: 0 0 0 3px rgba(164, 138, 184, 0.1);
+            }
+
+            /* Error Messages */
+            .error-messages {
+                background: #fee;
+                border: 1px solid #c33;
+                border-radius: var(--radius-sm);
+                padding: 1rem;
+                margin-bottom: 1.5rem;
+                color: #c33;
+            }
+
+            .error-messages strong {
+                display: block;
+                margin-bottom: 0.5rem;
+            }
+
+            .error-messages ul {
+                list-style: disc;
+                margin-left: 1.5rem;
+                margin-top: 0.5rem;
+            }
+
+            .error-messages i {
+                margin-right: 0.5rem;
+            }
+
+            input.error {
+                border-color: #c33 !important;
+                background-color: #fff5f5;
+            }
+
+            input.error:focus {
+                box-shadow: 0 0 0 3px rgba(204, 51, 51, 0.1);
+            }
+
+            /* Responsive */
+            @media (max-width: 768px) {
+                .service-select-grid {
+                    grid-template-columns: 1fr;
+                }
+            }
+        </style>
+    </head>
 
 <body>
 
@@ -478,6 +511,7 @@
     <script src="assets/js/animations.js"></script>
     <script src="assets/js/ux-phase1.js"></script>
     <script src="assets/js/ux-phase2.js"></script>
+    <script src="assets/js/ux-phase3.js"></script>
 </body>
 
 </html>
