--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
             <img src="assets/img/logo_vector.png" alt="">
         </div>
         <div class="container hero-content">
-            <h1>Harmonia para o Corpo,<br>Serenidade para a Mente.</h1>
+            <h1>
+                <span>Harmonia para o Corpo,</span>
+                <span>Serenidade para a Mente.</span>
+            </h1>
             <p class="subtitle">Terapias manuais personalizadas para alívio da dor, bem-estar profundo e reequilíbrio
                 energético.</p>
             <a href="agendar.html" class="btn btn-primary btn-lg">Agende Sua Terapia</a>
